# samples

./: .gitignore  README.md
books/black-hat-python/chapter-01/: Dockerfile  Dockerfile-kali  README.md  netcat.py  proxy.py  scripts.sh  tcp_client.py  tcp_server.py  udp_client.py
books/elements-programming-interviews/04-Primitive-Types/: count_bits.py  familiarity.py  max_sizes.py  parity.py
books/haskell-programming/: FunctionWithLet.hs  Mood.hs  chap2ex.hs  chap4ex.hs  divison.hs  greetIfCool1.hs  greetIfCool2.hs  learn.hs  practice.hs  print.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  rent.ts  reverse.hs  test.hs  topOrLocal.hs
books/the-good-parts/: index.html  program.js
hello-world/c/: hello.c
hello-world/go/: README.md
hello-world/nasm/: README.md
hello-world/rust/: Cargo.toml  ci.sh
misc/advent-of-code/: README.md  input-reader.js
misc/advent-of-code/01/: frequencies.js  frequencies.json  repeat.js
misc/advent-of-code/02/: checksums.js  parts.js
misc/advent-of-code/03/: overlaps.js
misc/advent-of-code/04/: guards.js
mlcc-exercises/exercises/: intro_to_pandas.ipynb
rust/app_gtk/: Cargo.toml
rust/app_gtk/src/: main.rs
rust/freeverb/: Cargo.toml
rust/whisper/: Cargo.toml
rust/whisper/src/: lib.rs
web/indexdb/: index.html  main.js
web/python-hash-table/: .env  conftest.py  hashtable.py  requirements.txt  test_hashtable.py  test_hashtable_equality.py  test_hashtable_size.py
web/web-workers/: fib_worker.js  index.html  main.js  worker.js
youtube/cpp-tutorial-derek-banas/: README.md
(+293 files in other folders)
